--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "chai": "^4.2.0",
     "live-server": "^1.2.1",
     "mocha": "^8.1.1"
+  },
+  "dependencies": {
+    "browserify": "^17.0.0"
   }
 }
